--- a/app/src/scss/components/basket-main/_basket-main.scss
+++ b/app/src/scss/components/basket-main/_basket-main.scss
@@ -231,6 +231,69 @@
             color: $black;
         }
     }
+
+    .cart-delivery-type{
+        & > h4{
+            font-weight: bold;
+        }
+
+        & > p{
+           line-height: 1.2;
+        }
+        .select-type{
+
+            & .item-select-type{
+                padding: 5px 15px;
+                border: 1px solid $white-grey;
+                border-radius: 5px;
+                margin-right: 15px;
+            }
+
+            & input[type='radio']{
+                width: 15px;
+                height: 15px;
+                position: relative;
+                z-index: 2;
+                cursor: pointer;
+                opacity: 0;
+                margin-right: 8px;
+            }
+
+            & label{
+                position: relative;
+            }
+
+            .item-select-type.active{
+                border-color: yellow;
+            }
+
+
+            & input[type='radio']:checked ~ label:before{
+                content: '';
+                width: 10.5px;
+                height: 10.5px;
+                border-radius: 50%;
+                position: absolute;
+                background: yellow;
+                left: -21.5px;
+                top: 7.5px;
+            }
+
+            & label:after{
+                content: '';
+                width: 16px;
+                height: 16px;
+                border-radius: 50%;
+                background: transparent;
+                position: absolute;
+                left: -24px;
+                top: 5px;
+                border: 1px solid yellow;
+            }
+        }
+    }
+
+
 }
 
 
